2007-05-31  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-actor.c:
	* clutter/clutter-actor.h:
	Add clutter_actor_get_transformed_point()

	* clutter/clutter-main.c:
	Plug in perspective setup to redraw 

	* clutter/clutter-stage.c:
	* clutter/clutter-stage.h:
	Remove audience code for now.

2007-05-31  Matthew Allum  <mallum@openedhand.com>

	* clutter/egl/clutter-backend-egl.c:
	* clutter/egl/clutter-backend-egl.h:
	* clutter/egl/clutter-event-egl.c:
	* clutter/egl/clutter-stage-egl.c:
	* clutter/egl/clutter-stage-egl.h:
	Rename Egl -> EGL

2007-05-31  Matthew Allum  <mallum@openedhand.com>

	* clutter/glx/clutter-backend-glx.c:
	* clutter/glx/clutter-backend-glx.h:
	* clutter/glx/clutter-event-glx.c:
	* clutter/glx/clutter-glx.h:
	* clutter/glx/clutter-stage-glx.c:
	* clutter/glx/clutter-stage-glx.h:
	Change type nameing from Glx -> GLX.
	Add basic event filtering functionality

2007-05-31  Tomas Frydrych  <tf@openedhand.com>

	* clutter/clutter-behaviour-ellipse.c:
	Changed behaviour so that a beginning angle of 0 would correspond
	to 12 o'clock.
	
2007-05-31  Tomas Frydrych  <tf@openedhand.com>

	* clutter/clutter-fixed.h:
	* clutter/clutter-fixed.c:
	(_clutter_double_to_int):
	Fixed return value to gint; added missing cast that broke negative
	number conversions.
	
	(CLUTTER_ANGLE_FROM_DEGX):
	Swapped division and multiplication around to avoid overflows.

	* clutter/clutter-behaviour-ellipse.c:
	Fixed incorrectly set lower bounds for angle properties.

	* clutter/clutter-actor.h:
	* clutter/clutter-actor.c:
	Added ClutterVertices type.
	(clutter_actor_get_transformed_vertices):
	New function.

2007-05-31  Matthew Allum  <mallum@openedhand.com>
	* TODO:
	Sync up for whats left for 0.4 release (and 0.6 ideas)

2007-05-31  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-behaviour-ellipse.c:
	Remove uneeded knot signal

	* clutter/clutter-behaviour-path.c: 
	Fix so knot signal is emitted only when a knot is reached.
